sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:7: error: '(' expected but 'for' found.
      for (i >- 0 to x-2){
      ^AlgCocktailSort1:24: error: Unmatched closing brace '}' ignored here
}
^